// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea should render \`Disabled\` state 1`] = `
<div>
  <div
    class="form-field-row"
  >
    <div
      class="form-label-wrap"
    >
      <label
        class="form-label disabled"
        for="disabled-field"
      >
        Disabled
      </label>
    </div>
    <div
      class="form-field disabled"
    >
      <textarea
        class="form-input"
        disabled=""
        id="disabled-field"
      />
    </div>
  </div>
</div>
`;

exports[`TextArea should render \`Error\` state 1`] = `
<div>
  <div
    class="form-field-row"
  >
    <div
      class="form-label-wrap"
    >
      <label
        class="form-label error"
        for="error-field"
      >
        Error
      </label>
    </div>
    <div
      class="form-field error"
    >
      <textarea
        class="form-input"
        id="error-field"
      />
      <span
        class="form-icon"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 256 256"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M205.66,194.34a8,8,0,0,1-11.32,11.32L128,139.31,61.66,205.66a8,8,0,0,1-11.32-11.32L116.69,128,50.34,61.66A8,8,0,0,1,61.66,50.34L128,116.69l66.34-66.35a8,8,0,0,1,11.32,11.32L139.31,128Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`TextArea should render \`Small\` size 1`] = `
<div>
  <div
    class="form-field-row"
  >
    <div
      class="form-label-wrap"
    >
      <label
        class="form-label"
        for="small-field"
      >
        Small
      </label>
    </div>
    <div
      class="form-field small"
    >
      <textarea
        class="form-input"
        id="small-field"
      />
    </div>
  </div>
</div>
`;

exports[`TextArea should render \`Success\` state with \`Large\` size 1`] = `
<div>
  <div
    class="form-field-row"
  >
    <div
      class="form-label-wrap"
    >
      <label
        class="form-label success"
        for="success-field"
      >
        Success
      </label>
    </div>
    <div
      class="form-field success"
    >
      <textarea
        class="form-input"
        id="success-field"
      />
      <span
        class="form-icon"
      >
        <svg
          fill="currentColor"
          height="20"
          viewBox="0 0 256 256"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M229.66,77.66l-128,128a8,8,0,0,1-11.32,0l-56-56a8,8,0,0,1,11.32-11.32L96,188.69,218.34,66.34a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`TextArea should render counter with \`maxLength: 100\` 1`] = `
<div>
  <div
    class="form-field-row"
  >
    <div
      class="form-label-wrap"
    >
      <label
        class="form-label"
        for="with-counter"
      >
        With Counter
      </label>
      <span
        class="form-hint"
      >
        0
         / 
        100
      </span>
    </div>
    <div
      class="form-field"
    >
      <textarea
        class="form-input"
        id="with-counter"
        maxlength="100"
      />
    </div>
  </div>
</div>
`;
